"done changes in data weave code"
"done changes in data weave code"

--- a/mss-memf-generic-event-producer-sapi-v2/src/main/resources/properties/local-properties.yaml
+++ b/mss-memf-generic-event-producer-sapi-v2/src/main/resources/properties/local-properties.yaml
@@ -14,6 +14,6 @@ Activemq:
   password: "admin"
   url: "tcp://localhost:61616"
   
-environment: "dev"
+environment: "local"
 applicationName: "mss-memf-generic-event-producer-sapi-v2"
 
